# tron-io

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_wasm.sh  deploy_local.sh
.github/workflows/: rust.yml  wasm.yml
client/: Cargo.toml
client/assets/sfx/: boost.cpt  boost_old.cpt  explosion.cpt  gameLose.cpt  gameWin.cpt  roundStart.cpt  roundWin.cpt
client/assets/shaders/: crt.frag  default.frag  default.vert  glow_ref.frag  glow_ref.vert  glow_testing.frag
client/src/: audio.rs  colors.rs  context.rs  draw.rs  gameplay.rs  input.rs  main.rs  online.rs  scene.rs  settings.rs  text.rs
client/src/input/: virtual_gamepad.rs
client/src/scene/: main_menu.rs
client/src/scene/main_menu/: credits.rs  game_options.rs  lobby.rs  settings_scene.rs
client/src/ui/: menu.rs
server/: Cargo.toml  default
server/src/: main.rs
src/: assets_path.rs  audio.rs  bike.rs  context.rs  game.rs  gameplay.rs  grid.rs  input.rs  lib.rs  main.rs  scene.rs  snake.rs  text.rs  world.rs
src/grid/: ai.rs  bike.rs  colors.rs  msg.rs
src/grid/bike/: ai.rs
src/input/: virtual_gamepad.rs
src/scene/: main_menu.rs
src/scene/main_menu/: lobby.rs
src/ui/: menu.rs
src/world/: client.rs  local.rs  online.rs  server.rs
src/world/server/: connection.rs
static/: index.html  quad-net.js
world/: Cargo.toml
world/src/: client.rs  grid.rs  lib.rs  local.rs  server.rs
world/src/grid/: bike.rs
world/src/grid/bike/: ai.rs
world/src/server/: connection.rs
