[package]
name = "tron-io-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tron-io-world = { path = "../world" }
# gamepads = { version = "0.1.6", default-features = false }
# macroquad = { version = "0.4.13", features = ["audio"] }
nanoserde = "0.1.37"
# Fix receiving binary data in webassembly
quad-net = {git = "https://github.com/not-fl3/quad-net.git", rev = "refs/pull/8/head"}
log = "0.4"
env_logger = "0.11.8"
