[package]
name = "tron-io-world"
version = "0.1.0"
edition = "2024"

[dependencies]
# gamepads = { version = "0.1.6", default-features = false }
nanoserde = "0.1.37"
# Fix receiving binary data in webassembly
# quad-net = {git = "https://github.com/not-fl3/quad-net.git", rev = "refs/pull/8/head"}
log = "0.4"
quad-rand = "0.2.3"
pathfinding = "4.14.0"
[target.wasm32-unknown-unknown.dependencies]
sapp-console-log = "0.1"
macroquad = { version = "0.4.13", features = ["audio"] } # this is only for get_time()...
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8" # any other log-rs frontend will work fine as well
